# 50KEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
buildScripts/: Android_build.py  iOS.cmake  macOS_build.py
src/: CMakeLists.txt  MyMath.cpp  MyMath.h
